--- a/.github/workflows/start_pull_request.yaml
+++ b/.github/workflows/start_pull_request.yaml
@@ -13,11 +13,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build project
-        run: npm run build
-
-      - name: Start server for CI/CD
-        run: npm run start-ci
+      - name: Install dependencies and build project
+        run: |
+          cd client
+          npm install
+          npm run build
+          npm run start-ci
