--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+Group Report.docx
+EventManagerDB.sql
 
 npm-debug.log*
 yarn-debug.log*
